# camtest

./: CMakeLists.txt  README.md  main.cpp
qml/: main.qml
